fixed custom select visibility

--- a/src/index.css
+++ b/src/index.css
@@ -126,6 +126,6 @@
 }
 
 #modal {
-	z-index: 9999
+	z-index: 2
 }
 
